--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
 	"require": {
 		"laravel/framework": "4.1.*",
         "barryvdh/laravel-dompdf": "*"
+
 	},
 	"autoload": {
 		"classmap": [
@@ -33,5 +34,10 @@
 	"config": {
 		"preferred-install": "dist"
 	},
+
+    "suggest": {
+        "doctrine/dbal": "Allow renaming columns and dropping SQLite columns."
+    },
+
 	"minimum-stability": "stable"
 }
